--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <li>Felügyeli az alárendelt levelek eszközei és egy IoT Edge eszköz közötti kommunikációt egy IoT Edge eszközön lévő modulok, valamint egy IoT Edge eszköz és a felhő között.</li>
   </ul>
 
-  <div class="keret"><img src="runtime.png" alt="loT Edge-fu ttatókörnyezet" title="loT Edge-fu ttatókörnyezet"></div>
+  <div class="keret"><img src="runtime.png" alt="loT Edge-futtatókörnyezet" title="loT Edge-fu ttatókörnyezet">
+          <p class="kepalairas">Az IoT Edge-futtatókörnyezet</p></div>
    
    <h2>
     Verzióelőzmények
