--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 
 <table>
   <tr>
-     <th>Kibocsátási megjegyzések és eszközök</th>
+     <th style="text-align: center;">Kibocsátási megjegyzések és eszközök</th>
      <th>Típus</th>
      <th>Dátum</th>
      <th>Legfontosabb tudnivalók</th>
 
   </tr>
   <tr> 
-    <td>1,2 – RC1</td> 
+    <td style="text-align: center;">1,2 – RC1</td> 
     <td>Előnézet</td>
     <td>2020. november</td>
     <td>Az átjárók mögött IoT Edge eszközök
@@ -59,7 +59,7 @@
     </td>
     
   </tr>
-    <td>1.0.10</td>
+    <td style="text-align: center;">1.0.10</td>
     <td>Stable</td>
     <td>2020. október</td>
     <td>UploadSupportBundle Direct metódus <br>
@@ -69,7 +69,7 @@
       X. 509 manuális kiépítés</td>
   <tr>
     <tr>
-      <td>1.0.9</td>
+      <td style="text-align: center;">1.0.9</td>
       <td>Stable</td>
       <td>2020. március</td>
       <td>X. 509 automatikus kiépítés a DPS-vel <br>
