--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
 
  <link rel="stylesheet" href="styles.css">
- <title>Azure IoT Edge</title>
+ <title><span>Azure</span> IoT Edge</title>
 </head>
 
 <body>
   <div id="tartalom">
     <h1>
-    Az Azure IoT Edge
+    Az <span>Azure</span> IoT Edge
   </h1>
   <p>
-    Az Azure IoT Edge szolgáltatás a felhőbeli elemzéseket és egyéni üzleti logikákat eszközökre helyezi át, hogy a szervezet az üzleti elemzésekre tudjon koncentrálni az adatkezelés helyett. Az üzleti logikát szabványos tárolóba csomagolva kibővítheti IoT-megoldását, majd bármely eszközön üzembe helyezheti ezeket a tárolókat, és figyelheti az összes felhőből.
+    Az <span>Azure</span> IoT Edge szolgáltatás a felhőbeli elemzéseket és egyéni üzleti logikákat eszközökre helyezi át, hogy a szervezet az üzleti elemzésekre tudjon koncentrálni az adatkezelés helyett. Az üzleti logikát szabványos tárolóba csomagolva kibővítheti IoT-megoldását, majd bármely eszközön üzembe helyezheti ezeket a tárolókat, és figyelheti az összes felhőből.
   </p>
   <p>
     Az elemzések jelentős üzleti értékeket teremthetnek az IoT-megoldásokban, de nem szükséges minden elemzést a felhőben végezni. Ha a lehető leggyorsabban szeretne reagálni a vészhelyzetekre, a biztonsági rendellenesség észlelése számítási feladatokat a peremhálózat szélén is futtathatja. Ha csökkenteni kívánja a sávszélességi költségeket, és nem kívánja átvinni az terabájtos nyers adatokat, akkor az adatokat helyileg törölheti és összesítheti, majd csak elemzés céljából elküldheti a felhőbe a bepillantást.
@@ -22,11 +22,11 @@
     IoT Edge-futtatókörnyezet
   </h2>
   <p>
-    Az Azure IoT Edge-futtatókörnyezet egyéni és felhőbeli logikák is használatát is lehetővé teszi az IoT Edge-eszközökön. A futtatókörnyezet a IoT Edge eszközön helyezkedik el, és felügyeleti és kommunikációs műveleteket hajt végre. A futtatókörnyezet számos funkciót lát el:
+    Az <span>Azure</span> IoT Edge-futtatókörnyezet egyéni és felhőbeli logikák is használatát is lehetővé teszi az IoT Edge-eszközökön. A futtatókörnyezet a IoT Edge eszközön helyezkedik el, és felügyeleti és kommunikációs műveleteket hajt végre. A futtatókörnyezet számos funkciót lát el:
   </p>
   <ul>
     <li> A számítási feladatok telepítése és frissítése az eszközön.</li>
-    <li>Fenntartja Azure IoT Edge biztonsági szabványait az eszközön.</li>
+    <li>Fenntartja <span>Azure</span> IoT Edge biztonsági szabványait az eszközön.</li>
     <li>Biztosítja az IoT Edge-modulok folyamatos futását.</li>
     <li>Jelenti a modulok állapotát a felhőnek a távoli monitorozáshoz.</li>
     <li>Felügyeli az alárendelt levelek eszközei és egy IoT Edge eszköz közötti kommunikációt egy IoT Edge eszközön lévő modulok, valamint egy IoT Edge eszköz és a felhő között.</li>
